数据劫持-监听数据对象里的所有属性

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
   const vm = new Mvvm({
     el: '#app',
     data: {
-      name: 'zs'
+      name: 'zs',
+      a: {
+        b: '1'
+      }
     }
   })
   console.log(vm)
